Fixed spelling error

--- a/sabreamf/trunk/README
+++ b/sabreamf/trunk/README
@@ -1,6 +1,6 @@
 (c)2006 by Evert Pot (evert@collab.nl) 
 
-Documentation can be found om http://www.osflash.org/sabreamf/
+Documentation can be found on http://www.osflash.org/sabreamf/
 
 For questions and bugreports, report to evert@collab.nl or the OSFlash mailinglist
 
