--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-(c)2006 Rooftop Solutions (http://www.rooftopsolutions.nl) 
+Copyright (C) 2006, 2007 Rooftop Solutions. All rights reserved.
 
 Documentation can be found on http://www.osflash.org/sabreamf/
 
