--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 SabreAMF v1.0
 
-Copyright (C) 2006, 2007 Rooftop Solutions. All rights reserved.
+Copyright (C) 2006-2008 Rooftop Solutions. All rights reserved.
 
 Documentation, bug reports, downloads:
 http://code.google.com/p/sabreamf/
